# trae-agent

./: .gitignore  .pre-commit-config.yaml  INSTALL_SCRIPTS.md  MARKUP_ERROR_FIX.md  Makefile  OPENAI_COMPATIBLE_SERVICES.md  PR_DESCRIPTION.md  README.md  TRAJECTORY_RECORDING.md  api_example.py  build_tools.spec  demonstrate_markup_fix.py  install.bat  install.sh  pyproject.toml  run_tests.py  spark_config.yaml.example  test_markup_fix.py  test_shadow_box_62d.py  trae_config.example.json  trae_config.json  trae_config.json.bak  trae_config.json.example  trae_config.yaml.example  trae_queue.json
.github/ISSUE_TEMPLATE/: bug-report.yml  proposal.yml
.github/workflows/: pre-commit.yml  unit-test.yml
docs/: INSTALL_SCRIPTS.md  command_queue.md  legacy_config.md
evaluation/: README.md  __init__.py  patch_selection.py  run_evaluation.py  setup.sh  swebench.py  utils.py
evaluation/patch_selection/: Selector.md  analysis.py  selector.py
evaluation/patch_selection/trae_selector/: sandbox.py  selector_agent.py  selector_evaluation.py  utils.py
examples/tools/: bash_example.py  ckg_tool_example.py  edit_tool_example.py  json_edit_tool_example.py  run_example.py
sdk/: __init__.py
sdk/python/: _run.py
server/: Readme.md
test/utils_test/: utils_config_test.py
tests/: conftest.py  test_agent_cleanup.py  test_bash_tool_cleanup.py  test_cli_improvements.py  test_client.py  test_fixes_integration_simple.py  test_integration_fixes.py  test_llm_client_fix.py  test_sequential_thinking_fix.py
tests/agent/: test_tool_confirmation.py  test_trae_agent.py
tests/api/: __init__.py  conftest.py  test_broker_factory.py  test_echo.py  test_metrics.py  test_sqlite_integration.py  test_trae_api.py
tests/api/agent/: conftest.py
tests/api/e2e/: test_structured_logging_integration.py  test_task_endpoints.py
tests/api/unit/: test_resources.py  test_structured_logging.py  test_taskiq_integration.py
tests/config/: __init__.py  test_config.py
tests/doubles/: __init__.py  agent_doubles.py
tests/tools/: test_bash_tool.py  test_edit_tool.py  test_fibonacci.py  test_sequential_thinking_tool.py
tests/utils/: test_command_queue.py  test_config.py  test_deepseek_client.py  test_doubao_client_utils.py  test_llama_cpp_client.py  test_openai_compatible_factory.py  test_openai_compatible_refactor.py  test_qwen_client.py  test_siliconflow_client.py
tests_client/: readme.md  test_doubao_client_utils.py  test_ollama_client_utils.py
tools/: __init__.py  fibonacci.py
trae-agent-rs/: Cargo.toml  trajectory.jsonl
trae-agent-rs/src/: main.rs
trae_agent/: __init__.py  cli.py  patch_selection.py
trae_agent/agent/: agent.py  agent_basics.py  base.py  base_agent.py  docker_manager.py  selector_agent.py  trae_agent.py
trae_agent/db/: db.py
trae_agent/prompt/: agent_prompt.py  tools.py
trae_agent/sandbox/: __init__.py  shadow_box_62d.py
trae_agent/schemas/: __init__.py  requests.py  responses.py
trae_agent/tools/: __init__.py  base.py  bash_tool.py  ckg_tool.py  docker_tool_executor.py  edit_tool.py  edit_tool_cli.py  json_edit_tool.py  json_edit_tool_cli.py  mcp_tool.py  run.py  sandbox_base.py  sequential_thinking_tool.py  shadow_box_tool.py
trae_agent/tools/ckg/: ckg_database.py
trae_agent/tools/sandbox/: sb_bash_tool.py  sb_edit_tool.py  sb_json_edit_tool.py
trae_agent/utils/: anthropic_client.py  azure_client.py  cli_console.py  command_queue.py  config.py  constants.py  doubao_client.py  gemini_client.py  google_client.py  lake_view.py  legacy_config.py  llama_cpp_client.py  llm_client.py  local_client.py  mcp_client.py  ollama_client.py  openai_client.py  openai_compatible_client.py  openrouter_client.py  otel_recorder.py  project_rules.py  retry_utils.py  rules_manager.py  siliconflow_client.py  temp_dir.py  trajectory_recorder.py
trae_agent/utils/cli/: __init__.py  cli_console.py  rich_console.py  rich_console.tcss  simple_console.py
trae_agent/utils/db/: ckg.py  db.py
trae_agent/utils/llm_clients/: anthropic_client.py  azure_client.py  base_client.py  burncloud_client.py  deepseek_client.py  doubao_client.py  google_client.py  llm_basics.py  llm_client.py  ollama_client.py  openai_client.py  openai_compatible_base.py  openrouter_client.py  qwen_client.py  retry_utils.py  siliconflow_client.py
trae_agent/utils/models/: openai_client.py  openai_compatible_factory.py  siliconflow.py
trae_agent/utils/openai_compatible/: __init__.py  base.py  factory.py
trae_agent_rs/: .gitignore  CLI_USAGE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
trae_agent_rs/cli/: Cargo.toml
trae_agent_rs/cli/src/: lib.rs  main.rs
trae_agent_rs/cli/src/tui/: app.rs  event.rs  layout.rs  mod.rs  multiline_input.rs  popup_input.rs  review_history.rs  scroll_test.rs  settings.rs  state.rs  state_test.rs
trae_agent_rs/core/: Cargo.toml  demo_trajectory.json
trae_agent_rs/core/examples/: openai_compatible_test.rs  review_history_demo.rs  streaming_demo.rs  trae_agent_test.rs  trajectory_demo.rs
trae_agent_rs/core/review_records/: review_001.json  review_002.json  review_003.json  review_004.json  review_005.json
trae_agent_rs/core/src/: lib.rs
trae_agent_rs/core/src/agent/: base_agent.rs  mod.rs  trae.rs
trae_agent_rs/core/src/config/: mod.rs
trae_agent_rs/core/src/llm/: anthropic_client.rs  error.rs  llm_basics.rs  llm_client.rs  llm_provider.rs  mod.rs  openai_client.rs  openai_compatible_base.rs  openai_compatible_client.rs  openrouter_client.rs  retry_utils.rs
trae_agent_rs/core/src/log/: log.rs
trae_agent_rs/core/src/tools/: base.rs  bash.rs  done.rs  edit.rs  edit_file.rs  list_directory.rs  mod.rs  read_file.rs  read_many_files.rs  todo_list.rs  write_file.rs
trae_agent_rs/core/src/trajectories/: mod.rs  trajectories.rs
trae_agent_rs/core/src/utils/: mod.rs  review_history.rs  trajectory.rs
trae_api/: __init__.py  __main__.py
trae_api/api/: router.py
trae_api/core/: application.py  config.py  dependencies.py  gunicorn.py  lifespan.py  metrics.py  resources.py  settings.py
trae_api/tasks/: broker.py  examples.py  result_backends.py  workers.py
(+42 files in other folders)
