[package]
name = "trae-cli"
edition = "2024"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Command-line interface for Trae Agent"
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "trae-agent"
path = "src/main.rs"

[dependencies]
trae-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
figlet-rs = "0.1"
owo-colors = "4.0"
once_cell = "1.21.3"
ratatui = "0.29.0"
crossterm = "0.28.1"
futures = "0.3"
dirs = "5.0"
tokio-stream = "0.1"
